Add note about CLASSPATH.

--- a/htdocs/java/FAQ.html
+++ b/htdocs/java/FAQ.html
@@ -33,6 +33,13 @@
 	we don't know.  Generally speaking, porting to a new system
 	should not be hard.  This would be a good way to volunteer.</dd>
 
+      <dt>My program is dumping core!  What's going on?</dt>
+      <dd>I could be any number of things.  One common mistake is 
+        having your <tt>CLASSPATH</tt> environment variable pointing
+	at a third party's java.lang and friends.  Either
+	unset <tt>CLASSPATH</tt>, or make sure it does not refer to 
+        core libraries other than those found in libgcj.zip.</dd>
+
     </dl>
 
 <!--#include virtual="/include/footer-subpages.html"-->
