Note Mark Mitchell as co-maintainer of the C++ front-end.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -56,6 +56,12 @@ available.
 
 <dl>
 
+<dt><b>April 15, 1999</b></dt>
+<dd>
+Mark Mitchell is now a co-maintainer of the C++ front end along with
+Jason Merrill.
+</dd>
+
 <dt><b>April 13, 1999</b></dt>
 <dd>
 We have set up a new <a href="lists.html">mailing list</a>
@@ -175,7 +181,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 13, 1999.</i>
+<i>Last modified on April 15, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
