--- a/htdocs/java/FAQ.html
+++ b/htdocs/java/FAQ.html
@@ -23,6 +23,14 @@
 	4.18</a> includes support for debugging gcj-compiled Java
 	programs.</dd>
 
+      <dt>I've downloaded egcs, but I don't see gcj.  Where is it?</dt>
+      <dd>Although gcj has been in the egcs cvs repository for some time
+	now, it has not appeared in any official releases.  It will
+	be included in the coming 1.2 release.  Until then you will
+	need to download one of the recent egcs snapshots (which have
+	always included gcj), or use anonymous cvs.  See 
+	<a href="http://egcs.cygnus.com/">the egcs pages</a> for details.</dd>
+
       <dt>Why isn't libgcj part of egcs?</dt>
       <dd>Copyright problems.  It's possible that libgcj will end up
 	in egcs at some point in the future.</dd>
