--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -56,6 +56,13 @@ available.
 
 <dl>
 
+<dt><b>April 20, 1999</b></dt>
+<dd>
+Yes, it is not a hoax: The egcs steering committee is appointed official
+GNU maintainer for GCC; the egcs team will be responsible for rolling out
+future GCC releases.
+</dd>
+
 <dt><b>April 15, 1999</b></dt>
 <dd>
 Mark Mitchell is now a co-maintainer of the C++ front end along with
@@ -179,10 +186,14 @@ There are certain
 <a href="contribute.html">legal requirements and style issues</a>
 which all contributions must meet.
 
-<hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 15, 1999.</i>
-
 <!--#include virtual="/glimpsebox.html"-->
+
+<address>
+<a href="about.html">The egcs team</a>
+<br>
+<small><i>Last modified on April 21, 1999.</i></small>
+</address>
+
 </body>
 </html>
