Update link to the CrossGCC FAQ. By Daniel Jacobowitz <drow@false.org>.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -52,7 +52,7 @@ that re-defining LANGUAGES when calling <tt>make bootstrap</tt>
 <p><b>Building a cross compiler</b>
 
 <p> We recommend reading the
-<a href="ftp://ftp.cygnus.com/pub/embedded/crossgcc/FAQ">
+<a href="http://www.objsw.com/CrossGCC/">
 crossgcc FAQ</a> for information about building cross compilers.
 
 <p>For a cross build, issue the command "make cross", which performs the
@@ -74,7 +74,7 @@ following steps:
 
 <p>
 <hr>
-<i>Last modified on Dec  6, 1998.</i>
+<i>Last modified on April 22, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
