Tweak to the "Bug Report" entry. By Hans-Peter Nilsson <hp@bitrange.com>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -240,12 +240,13 @@ of the gcc maintainers.
 
 <hr>
 <h2><a name="bugreport">How to report bugs</a></h2>
-<p>There are complete instructions in the egcs info manual, section Bugs.  The
-manual can be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if the GNU
-<tt>info</tt> program is installed on your system by
- `<tt>info --node "(gcc)Bugs"</tt>'.
-Or see the file <a href="/cgi-bin/cvsweb/gcc/BUGS?rev=1.1">BUGS</a> included
-with the egcs source code.
+<p>There are complete instructions in the
+<a href="onlinedocs/">egcs info manual</a>, section Bugs.
+The manual can also be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if
+the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
+"(gcc)Bugs"</tt>'. Or see the file
+<a href="http://egcs.cygnus.com/cgi-bin/cvsweb/~checkout~/egcs/gcc/BUGS?rev=1.4">BUGS</a>
+included with the egcs source code.
 
 <p>Before you report a bug for the <em>C++ compiler</em>, please check
 the <a href="bugs.html">list of well-known bugs</a>. If you
@@ -1190,7 +1191,7 @@ is declared pure-virtual [class.dtor]/7.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  April 12, 1999</i>
+<p><i>Last modified:  April 23, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
