Add Jason Molenda

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -115,6 +115,8 @@ particular order.
   <li> Michael Meissner for LRS framework, m32r, v850, powerpc, haifa and
   other assorted hacking.
   <li> Jason Merrill for leading the g++ effort.
+  <li> Jason Molenda for major help in the care and feeding of all the services
+       on the egcs machine -- mail, web services, ftp services, etc etc.
   <li> David Mosberger-Tang for various Alpha improvements.
   <li> Stephen Moshier for ISO C9X support.
   <li> Bill Moyer for his behind the scenes work on various issues.
@@ -241,7 +243,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  April 8, 1999</i>
+<p><i>Last modified:  April 26, 1999</i>
 
 
 <hr>
