--- a/htdocs/egcs-1.2/schedule.html
+++ b/htdocs/egcs-1.2/schedule.html
@@ -24,7 +24,6 @@ before the release cycle gets into full swing.  Specifically:
     <li> Mising fixes.  We need to add known missing fixes, then verify
          that the new scheme is working 100% reliably on the major
 	 hosts by comparing with the old fixincludes scheme.
-    <li> Missing dependencies in the generated Makefile
     <li> Windows issues
     <li> Move fixinc.* selection logic from  mkfixinc.sh back into
 	 gcc/configure.in 
@@ -35,9 +34,8 @@ before the release cycle gets into full swing.  Specifically:
   <li> Fix EH vs loop unrolling problem.  The patch has been
        approved, but not yet installed.
   <li> Fix any bugs exposed by compiling glibc, linux-2.2.x and other
-       major packages.  Major bughunting work.
-  <li> Finish dealing with relative include paths and the ability
-       to move toolchains around without rebuilding or -B arguments.
+       major packages.  Major bughunting work. (linux-2.2.6 seems to be
+       happy on the x86)
   <li> Issues for new targets (uwin, interix, hpux11, openbsd, etc?)
   <li> SMP build fixes (java & chill)
   <li> Testsuite legal issues need to be resolved.
@@ -98,6 +96,316 @@ regression testing effort and major software testing.
 will hopefully start to appear soon as well as updated on the issues mentioned
 in the list above.
  
+<h2>Current Bootstrap Status</h2>
+<p>
+<table border="0">
+<tr>
+<th>
+Platform
+</th>
+<th>
+-O0
+</th>
+<th>
+-O1
+</th>
+<th>
+-O2
+</th>
+<th>
+-O3
+</th>
+<th>
+-O3 -fu-a-l
+</th>
+<th>
+-O2 -fo-f-p
+</th>
+</tr>
+<tr>
+<td>
+alpha-dec-osf4
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+hppa2.0-hp-hpux10.20
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+N/A
+</td>
+</tr>
+<tr>
+<td>
+i386-pc-freebsd2.2.6
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+</tr>
+<tr>
+<td>
+i586-pc-linux-gnulibc1
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+i586-pc-linux-gnu
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+</tr>
+<tr>
+<td>
+i686-pc-linux-gnulibc1
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+i686-pc-linux-gnu
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+</tr>
+<tr>
+<td>
+i686-pc-sco3.2v5.0.5
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+m68k-hp-bsd4.4
+</td>
+<td>
+OK
+</td>
+<td>
+</td>
+<td>
+OK
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+mips-sgi-irix6.5
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+N/A
+</tr>
+<tr>
+<td>
+{rs6000,powerpc}-ibm-aix4.2
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+powerpc-ibm-linux-gnu
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-solaris2.5
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+OK
+</td>
+<td>
+N/A
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-sunos4.1
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-linux-gnu
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+
 <hr>
 <i>Last modified on April 25, 1999.</i>
 
