1999-04-21  Andrew Haley  <aph@cygnus.com>         * port-signals.html: New file.         * index.html:  Link to port-signals.html added.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -79,6 +79,7 @@ troublemakers, a group of dedicated hackers.  We're:
       <li><a href="papers/cni/t1.html">CNI Documentation</a>
       <li>How to <a href="port-threads.html">port</a> the thread layer.
       <li>How to <a href="port-files.html">port</a> the file handling layer.
+      <li>How to <a href="port-signals.html">port</a> the signal handling layer.
     </ul>
 
 <h2>Papers describing our work</h2>
