--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -96,7 +96,7 @@ particular order.
   <li> Marc Lehmann for his guidance via the steering committee and helping
   with analysis and improvements of x86 performance.
   <li> Kriang Lerdsuwanakij for improvements to demangler and various c++ fixes.
-  <li> Robert Lipe for OpenServer support, new testsuites, testing, etc.
+  <li> <a href="http://robertl.freeservers.com">Robert Lipe</a> for OpenServer support, new testsuites, testing, etc.
   <li> Weiwen Liu for testing and various bugfixes.
   <li> Martin von Loewis for internal consistency checking infrastructure,
   c++ namespaces.
