Add home page for Mark Mitchell

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -123,7 +123,7 @@ particular order.
   <li> David Miller for overall direction via the steering committee, lots of
   SPARC work, improvements in jump.c and interfacing with the Linux kernel
   developers.
-  <li> Mark Mitchell for mountains of C++ work, load/store hoisting out of
+  <li> <a href="http://www.codesourcery.com">Mark Mitchell</a> for mountains of C++ work, load/store hoisting out of
   loops and alias analysis improvements, ISO "restrict" support.
   <li> Alan Modra for various Linux bits and testing.
   <li> Toon Moene for overall leadership via the steering committee, and his
