add URL to my name

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -23,8 +23,7 @@ particular order.
   <li> Christian Bruel for improvements to local store elimination.
   <li> Herman A.J. ten Brugge for various fixes.
   <li> Joe Buck for his guidance and leadership via the steering committee.
-  <li> Craig Burley for overall direction in the steering committee and
-  leadership of the Fortran effort.
+  <li> <a href="http://world.std.com/~burley/">Craig Burley</a> for leadership of the Fortran effort.
   <li> Andrew Cagney
   <li> John Carr for his alias work, SPARC hacking, infrastructure improvements,
   direction via the steering committee, loop optimizations, etc.
