Added my home page. Also corrected spelling to use umlauts.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -97,7 +97,7 @@ particular order.
   <li> Kriang Lerdsuwanakij for improvements to demangler and various c++ fixes.
   <li> <a href="http://robertl.freeservers.com">Robert Lipe</a> for OpenServer support, new testsuites, testing, etc.
   <li> Weiwen Liu for testing and various bugfixes.
-  <li> Martin von Loewis for internal consistency checking infrastructure,
+  <li> <a href="http://www.informatik.hu-berlin.de/~loewis/">Martin von L&ouml;wis</a> for internal consistency checking infrastructure,
   c++ namespaces.
   <li> Dave Love for his ongoing work with the Fortran front end and 
   runtime libraries.
