--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -10,8 +10,8 @@ The egcs project would like to thank its many contributors.  Without them the
 project would not have been nearly as successful as it has been.  Any omissions
 in this list are accidental.  Feel free to contact
 <a href="mailto:law@cygnus.com">law@cygnus.com</a> if you have been left out
-or some of your contributions are not listed.  The listing is not in any
-particular order.
+or some of your contributions are not listed.  Please keep this list in
+alphabetical order.
 
 <ul>
   <li> Klaus-Georg Adams
@@ -242,7 +242,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  April 26, 1999</i>
+<p><i>Last modified:  May 6, 1999</i>
 
 
 <hr>
