Add new "Help" section. Replace some physical markup by logical markup.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -63,7 +63,7 @@ may have changed since you last visited this page.
 
 
 <a name="msgsize"><h2>Policies</h2></a>
- 
+
 <p>All the lists have a maximum message size.  If your message exceeds
 more than 40kbytes, you should compress any attachments before sending
 it to the list.
@@ -97,15 +97,24 @@ the search function, send a copy to
 <h2>Subscription</h2>
 
 <p>To subscribe to a list, send a blank mail to
-<i>listname</i><tt>-subscribe@egcs.cygnus.com</tt>
+<code><i>listname</i>-subscribe@egcs.cygnus.com</code>
 
 <p>To unsubscribe, send a blank mail to 
-<i>listname</i><tt>-unsubscribe@egcs.cygnus.com</tt>
+<code><i>listname</i>-unsubscribe@egcs.cygnus.com</code>
 
 <p>Each list also has a digest, which you can subscribe to by sending mail
 to
-<i>listname</i><tt>-digest-subscribe@egcs.cygnus.com</tt>
+<code><i>listname</i>-digest-subscribe@egcs.cygnus.com</code>
 
+
+<h2>Help</h2>
+
+<p>For further information on using the lists, send a blank mail to
+<code><i>listname</i>-help@egcs.cygnus.com</code>.</p>
+
+<p>As a <em>last</em> resort, for example if you want to unsubscribe
+while your mail server is listed by ORBS, contact <a
+href="mailto:law@cygnus.com">law@cygnus.com</a>.</p>
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
@@ -113,7 +122,7 @@ to
 <hr>
 <a name="glimpsebox"></a>
 
-<p><i>Last modified:  April 13, 1999</i>
+<p><i>Last modified:  May  4, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
