--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -82,7 +82,10 @@ alphabetical order.
   <li> Richard Kenner for his ongoing work with gcc2.
   <li> Robin Kirkham for cpu32 support.
   <li> Mark Klein for PA improvements.
-  <li> Bruce Korb for the future replacement of "fixincludes".
+  <li> <A href="mailto:autogen@freeservers.com">Bruce Korb</A
+       > for the replacement of "<A
+       HREF="http://autogen.freeservers.com/fixincludes/index.html"
+       >fixincludes</A>".
   <li> Geoffrey Keating for his ongoing work to make the PPC work for Linux.
   <li> Brendan Kehoe for his ongoing work with g++.
   <li> Mumit Khan for various contributions to the cygwin and mingw32 ports and
