--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -26,13 +26,16 @@ immediately propagate to the web server and you can easily track any
 changes or contribute some of your own.
 </p>
 
+<p>Want to contribute? Please check our <a href="web.html">TODO list</a>!</p>
+</p>
+
 <a name="glimpsebox"></a>
 <!--#include virtual="/glimpsebox.html"-->
 
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on April 15, 1999.</i></small>
+<small><i>Last modified on May  5, 1999.</i></small>
 </address>
 
 </body>
