Updated HP Address

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -87,16 +87,14 @@ alphabetical order.
   <li> Mumit Khan for various contributions to the cygwin and mingw32 ports and
   maintaining binary releases for Windows hosts.
   <li> Thomas Koenig for various bugfixes.
-  <li> <A href="mailto:autogen@autogen.freeservers.com">Bruce Korb</A
-       > for the replacement of "<A
-       HREF="http://autogen.freeservers.com/fixincludes/index.html"
-       >fixincludes</A>".
+  <li> <a href="mailto:autogen@autogen.freeservers.com">Bruce Korb</a>
+       for the replacement of "<a href="http://autogen.freeservers.com/fixincludes/index.html">fixincludes</a>".
   <li> Benjamin Kosnik for his g++ work.
   <li> Jeff Law for coordinating the entire project, rolling out snapshots
        and releases, handling merges from GCC2, and random but extensive
        hacking.
-  <li> Marc Lehmann for his guidance via the steering committee and helping
-  with analysis and improvements of x86 performance.
+  <li> <a href="http://www.goof.com/pcg/marc/">Marc Lehmann</a> for his guidance via the steering committee and helping
+       with analysis and improvements of x86 performance.
   <li> Kriang Lerdsuwanakij for improvements to demangler and various c++ fixes.
   <li> <a href="http://robertl.freeservers.com">Robert Lipe</a> for OpenServer support, new testsuites, testing, etc.
   <li> Weiwen Liu for testing and various bugfixes.
