add news item about g77 bounds-checking

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -56,6 +56,15 @@ available.
 
 <dl>
 
+<dt><b>April 23, 1999</b></dt>
+<dd>
+<code>g77</code> now supports optional run-time checking
+of array subscript expressions.
+The official name of the compile-time option for this
+has not yet been decided,
+but it will be in time for 1.2.
+</dd>
+
 <dt><b>April 20, 1999</b></dt>
 <dd>
 Yes, it is not a hoax: The egcs steering committee is appointed official
@@ -198,7 +207,7 @@ which all contributions must meet.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on April 23, 1999.</i></small>
+<small><i>Last modified on May 13, 1999.</i></small>
 </address>
 
 </body>
