list my web page

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -140,8 +140,9 @@ small fixes.
   <li> Geoff Noer for this work on getting cygwin native builds working.
   <li> Markus F.X.J. Oberhumer
   <li> Sergey Okhapkin
-  <li> Alexandre Oliva for various build infrastructure improvements, scripts
-  and amazing testing work.
+  <li> <A href="http://www.dcc.unicamp.br/~oliva/">Alexandre Oliva</A>
+  for various build infrastructure improvements, scripts and amazing
+  testing work.
   <li> Rainer Orth for random MIPS work, including improvements to our o32
        ABI support, improvements to dejagnu's MIPS support, etc.
   <li> Melissa O'Neill for various NeXT fixes.
@@ -244,7 +245,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  May 6, 1999</i>
+<p><i>Last modified:  May 13, 1999</i>
 
 
 <hr>
