Link in the gcc-2.95 page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,6 +29,7 @@ GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
 <a href="egcs-1.1/egcs-1.1.2.html">egcs-1.1.2</a> is the current release.
+<a href="gcc-2.95/gcc-2.95.html">gcc-2.95</a> is the next major release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
@@ -207,7 +208,7 @@ which all contributions must meet.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on May 13, 1999.</i></small>
+<small><i>Last modified on May 15, 1999.</i></small>
 </address>
 
 </body>
