--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -78,10 +78,7 @@ provided shortly.
 Platform
 </th>
 <th>
-egcs-1.1
-</th>
-<th>
-gcc-2.95
+build
 </th>
 <th>
 regressions
@@ -139,6 +136,7 @@ hppa1.1-hp-hpux10.20
 <td>
 </td>
 <td>
+OK
 </td>
 </tr>
 <tr>
