Add link to homepage to my entry

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -123,8 +123,9 @@ alphabetical order.
   <li> David Miller for overall direction via the steering committee, lots of
   SPARC work, improvements in jump.c and interfacing with the Linux kernel
   developers.
-  <li> <a href="http://www.codesourcery.com">Mark Mitchell</a> for mountains of C++ work, load/store hoisting out of
-  loops and alias analysis improvements, ISO "restrict" support.
+  <li> <a href="http://www.codesourcery.com">Mark Mitchell</a> for mountains of
+       C++ work, load/store hoisting out of
+       loops and alias analysis improvements, ISO "restrict" support.
   <li> Alan Modra for various Linux bits and testing.
   <li> Toon Moene for overall leadership via the steering committee, and his
   ongoing work to make us make Fortran run fast.
@@ -194,7 +195,8 @@ small fixes.
   <li> John Wehle for various improvements for the x86 code generator and
   related infrastructure improvements to help x86 code generation.
   <li> Stephen Williams
-  <li> Zack Weinberg for major work on cpplib.
+  <li> <a href="http://rabi.phys.columbia.edu/~zack/">Zack Weinberg</a>
+       for major work on cpplib and various other bugfixes.
   <li> Jim Wilson for tackling hard problems in various places that nobody else
   wanted to work on.
   <li> Carlo Wood for various fixes.
