--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -98,6 +98,7 @@ fast-fixinc
 alpha-dec-osf4
 </td>
 <td>
+FAILS
 </td>
 <td>
 </td>
@@ -113,6 +114,7 @@ alpha-dec-osf4
 alphaev5-unknown-linux-gnu
 </td>
 <td>
+OK
 </td>
 <td>
 </td>
@@ -121,6 +123,7 @@ alphaev5-unknown-linux-gnu
 <td>
 </td>
 <td>
+N/A
 </td>
 </tr>
 <tr>
@@ -128,6 +131,7 @@ alphaev5-unknown-linux-gnu
 hppa1.1-hp-hpux10.20
 </td>
 <td>
+OK
 </td>
 <td>
 </td>
@@ -159,6 +163,7 @@ i386-pc-freebsd2.2.6
 i586-pc-linux-gnu
 </td>
 <td>
+OK
 </td>
 <td>
 </td>
@@ -204,6 +209,7 @@ i686-pc-linux-gnulibc1
 i686-pc-linux-gnu
 </td>
 <td>
+OK
 </td>
 <td>
 </td>
@@ -244,9 +250,10 @@ m68k-hp-bsd4.4
 </tr>
 <tr>
 <td>
-mips-sgi-irix6.{1,2,3,4,5}
+mips-sgi-irix6.5
 </td>
 <td>
+OK
 </td>
 <td>
 </td>
@@ -359,7 +366,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on May 15, 1999.</i>
+<p><i>Last modified on May 16, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
