*** empty log message ***

--- a/htdocs/web.html
+++ b/htdocs/web.html
@@ -26,6 +26,11 @@ of being implemented soon. ;-)</p>
     non-insiders. [Marc Lehmann]
 <li>Write down some information concerning the testsuite.
     This might be combined with the previous item. [Marc Lehmann]
+<li>Switch the search engine to htdig as part of the egcs/fsf merger (jsm
+    has already started this and we'll probably be able to remove it from
+    the TODO list in the near future).
+<li>Investigate faq-o-matic to supplement (or possibly replace) the FAQ we
+    are currently maintaining.
 </ul>
 
 <a name="glimpsebox"></a>
