1999-05-17  Jason Molenda  (jsm@bugshack.cygnus.com)         * cvs.html: Change link to cvsweb to use new name.         * faq.html: Change link to cvsweb to use new name.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -245,7 +245,7 @@ of the gcc maintainers.
 The manual can also be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if
 the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
 "(gcc)Bugs"</tt>'. Or see the file
-<a href="http://egcs.cygnus.com/cgi-bin/cvsweb/~checkout~/egcs/gcc/BUGS?rev=1.4">BUGS</a>
+<a href="/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/BUGS?content-type=text/plain&only_with_tag=HEAD">BUGS</a>
 included with the egcs source code.
 
 <p>Before you report a bug for the <em>C++ compiler</em>, please check
@@ -1191,7 +1191,7 @@ is declared pure-virtual [class.dtor]/7.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  April 23, 1999</i>
+<p><i>Last modified:  May 17, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
