--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -49,7 +49,7 @@ we will not have to slip the schedule further.
   criteria in place.
 
   <p><li> <b>May 17, 1999. Branch Creation & Testing</b>.
-  <p> The gcc-2.95 branch will be created on May 17, 1999 and snapshots will
+  <p> The gcc-2.95 branch was created on May 17, 1999 and snapshots will
   occur from the gcc-2.95 branch instead of the mainline sources.  The
   <a href="branch.html">gcc-2.95 branch page</a> has information about
   how to check out the gcc-2.95 branch.
