--- a/htdocs/gcc-2.95/branch.html
+++ b/htdocs/gcc-2.95/branch.html
@@ -9,14 +9,14 @@
 situation you have three choices for handling your CVS tree.
 <ol>
   <li> Do nothing.  Your existing CVS tree will continue to track the mainline
-       egcs sources.
+       gcc sources.
   <li> Track just the gcc-2.95 release.  You can convert your existing CVS tree
        to track the gcc-2.95 release with the command:
-       <br><tt>cvs update -rgcc_2_95_branch</tt>
+       <br><tt>cvs update -rgcc-2_95-branch</tt>
   <li> Track both the gcc-2.95 release and the development sources.  You will
        need to check out the gcc-2.95 release in a separate directory using the
        command:
-       <br><tt>cvs co -rgcc_2_95_branch egcs</tt>
+       <br><tt>cvs co -rgcc-2_95-branch egcs</tt>
 </ol>
 
 <p>Considering that the primary focus of the project is on the gcc-2.95 release,
@@ -28,18 +28,20 @@ released, snapshots will return to tracking the mainline sources.
 <hr>
 <p>All patches for the gcc-2.95 release branch must be approved by either
 someone with global write privs or that maintains the specific file being
-patched.   At some point in the near future, all patches will need to go through
-the release coordinator.  A message will be sent to the egcs list at that time.
+patched.   At some point in the future, all patches will need to go through
+the release coordinator.  A message will be sent to the egcs list at that
+time.
 
 <p>We are only accepting bugfix patches for the gcc-2.95 release.
 
-<p>You can still submit patches for the mainline egcs sources.  However,
-responses to such patches may be delayed.
+<p>You can still submit patches for the mainline gcc sources.  However,
+responses to such patches may be delayed due to the focus on the gcc-2.95
+release.
 
 
 <hr>
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  May 15, 1999</i>
+<p><i>Last modified:  May 19, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
