--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -64,11 +64,9 @@ appropriate values.
 send those files to the testing coordinator
 <a href="mailto:cheewai_yeung@yahoo.com">cheewai_yeung@yahoo.com</a>.
 
-<p> We also want to perform some tests of the Java compiler and runtime
-libraries.  Since no Java compiler existed in egcs-1.1.x we merely want to
-see what ports work and how well they work.  It is not expected that Java
-will work everywhere.  Details for testing the Java compiler and runtime
-libraries will be provided shortly.
+<p> We will also perform some tests on the runtime libraries, but there is
+no need to run those tests with the egcs-1.1 based compiler.  Details for
+running and these test results will be added soon.
 
 <p>In addition to testsuite regression testing we need regression testing
 to verify that the new fast-fixincludes performs the same effective fixes
@@ -360,6 +358,9 @@ sparc-sun-linux-gnu
 </table>
 
 <h2> Package/Feature Testing </h2>
+<p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.x
+regression tests done first.
+
 <p> In addition to performing regression testing we want to test major
 software packages with gcc-2.95.  This list is not complete (I would like
 to add at least one major C++ and Fortran package).
