--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -73,7 +73,7 @@ to verify that the new fast-fixincludes performs the same effective fixes
 as the old slow fixincludes script.  Details for checking this will be
 provided shortly.
 
-Note that the minor versions of the systems below are subject to change
+<p>Note that the minor versions of the systems below are subject to change
 based on what OS versions the test volunteers have.
 <h2>Current Regression Testing Status</h2>
 <p>
