Update --enable-languages to hopefully be more clear. Update fast-fixincludes configury to reflect current reality.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -120,10 +120,10 @@ egcs.  A partial list of supported <tt>options</tt>:
   be integrated into the compiler itself.  This is still under development, but
   may be useful in limited situations.  This option is never enabled by default.
 
-  <li> <tt>--with-fast-fixincludes</tt> -- Specify that a newer and faster
-  method of fixing the system header files should be used.  This feature is
-  still under development, but we are interested in feedback from folks that
-  want to try it.  This option is never enabled by default..
+  <li> <tt>--without-fast-fixincludes</tt> -- Specify that the old, slower
+  method of fixing the system header files should be used. 
+  egcs-1.1.x and older releases default to the slow version gcc-2.95 and
+  newer releases will default to the fast version.
 
   <li> <tt>--enable-version-specific-runtime-libs</tt> -- Specify that runtime
   libraries should be installed in the compiler specific subdirectory
@@ -144,9 +144,8 @@ egcs.  A partial list of supported <tt>options</tt>:
   </tt><br>
   Currently, you can use any of the following: <tt>CHILL</tt>, <tt>c++</tt>,
   <tt>f77</tt>, <tt>java</tt> and <tt>objc</tt>. Please note, that this switch
-  will only work with recent snapshots (for instance, newer snapshots than
-  19981126 should do); it does not work with any egcs releases up to and
-  including 1.1.1, though!<br>
+  does not work with egcs-1.1.2 or older versions of egcs.  It will be supported
+  in gcc-2.95 and newer versions of gcc.<br>
   If you do not pass this flag, all languages available in the <tt>gcc</tt> sub-tree
   will be configured.  Re-defining LANGUAGES when calling <tt>make bootstrap</tt>
   <b>*does not*</b> work anymore, as those language sub-directories might not have been
@@ -176,7 +175,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on Dec   6, 1998.</i>
+<i>Last modified on May 20, 1999.</i>
 
 </body>
 </html>
