--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -7,11 +7,11 @@
 
 <h2> Regression Testing </h2>
 <p>One of the critical steps in making releases is regression testing.  For
-gcc-2.95 we want to perform regression tests against egcs-1.1.
+gcc-2.95 we want to perform regression tests against egcs-1.1.2.
 
 <p>Since it is impossible to test every platform, we have selected a list
 of popular platforms for which gcc-2.95 should have no regressions relative
-to egcs-1.1 for gcc, g++, g77, objc, libstdc++ and libio.
+to egcs-1.1.2 for gcc, g++, g77, objc, libstdc++ and libio.
 
 We also want to run libf2c and libjava testsuites to verify some basic
 functionality.
@@ -37,7 +37,7 @@ release cycle.
 set snapdir "/some/place/gcc-19990415"
 
 # set old_release_prefix to the prefix directory of an installed egcs-1.0.3a.
-set old_release_prefix /prefix/for/egcs-1.1
+set old_release_prefix /prefix/for/egcs-1.1.2
 
 set rootme "."
 set target_triplet [exec "$snapdir/config.guess"]
@@ -65,7 +65,7 @@ send those files to the testing coordinator
 <a href="mailto:cheewai_yeung@yahoo.com">cheewai_yeung@yahoo.com</a>.
 
 <p> We will also perform some tests on the runtime libraries, but there is
-no need to run those tests with the egcs-1.1 based compiler.  Details for
+no need to run those tests with the egcs-1.1.2 based compiler.  Details for
 running and these test results will be added soon.
 
 <p>In addition to testsuite regression testing we need regression testing
@@ -358,7 +358,7 @@ sparc-sun-linux-gnu
 </table>
 
 <h2> Package/Feature Testing </h2>
-<p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.x
+<p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
 regression tests done first.
 
 <p> In addition to performing regression testing we want to test major
