Move the "Fortran BOF" from "Upcoming Events" to the "News" section and update it.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -35,27 +35,24 @@ maintain and improve quality.
 <hr>
 
 
+<!--
 <h2>Upcoming Events</h2>
 
 <dl>
-
-<dt><b>May, 1999: Fortran BOF</b></dt>
-<dd>
-<a href="mailto:toon@moene.indiv.nluug.nl">Toon Moene</a> and
-<a href="mailto:craig@jcb-sc.com">Craig Burley</a>
-are organizing a Fortran Birds-Of-a-Feather (BOF) session for this May's
-<a href="http://www.linuxexpo.org/">LinuxExpo</a>.
-Details will be provided on
-<a href="http://world.std.com/~burley/">Craig's homepage</a> as they become
-available.
-<p>
-</dd>
-
 </dl>
+-->
 
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>May 22, 1999</b></dt>
+<dd>
+The Fortran Birds-of-a-Feather session at <a
+href="http://www.linuxexpo.org/">LinuxExpo</a> has been successful
+in providing us with the information to guide future development of
+GNU Fortran.  Notes and conclusions will be posted here shortly.
+</dd>
 
 <dt><b>April 23, 1999</b></dt>
 <dd>
@@ -208,7 +205,7 @@ which all contributions must meet.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on May 15, 1999.</i></small>
+<small><i>Last modified on May 26, 1999.</i></small>
 </address>
 
 </body>
