Use new htDig search box instead of Glimpse.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -200,7 +200,7 @@ There are certain
 which all contributions must meet.
 
 <a name="glimpsebox"></a>
-<!--#include virtual="/glimpsebox.html"-->
+<!--#include virtual="/searchbox.html"-->
 
 <address>
 <a href="about.html">The egcs team</a>
