Add missing news entry.  Rotate some old entries into news.html

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,56 @@ home page</a>.
 
 <dl>
 
+<dt><b>April 13, 1999</b></dt>
+<dd>
+We have set up a new <a href="lists.html">mailing list</a>
+<a href="http://egcs.cygnus.com/ml/egcs-cvs-wwwdocs/">egcs-cvs-wwwdocs</a>
+that tracks checkins to the egcs webpages CVS repository.
+</dd>
+
+<dt><b>April 7, 1999</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> announces the first public
+release of libgcj, the runtime component of the GNU compiler for Java.
+<br><a href="javaannounce.html">Read the release announcement</a>.
+<br><a href="http://sourceware.cygnus.com/java/">Goto the libgcj homepage</a>.
+</dd>
+
+<dt><b>April 6, 1999</b></dt>
+<dd>
+A new snapshot of the C++ standard library re-write has been
+released. This release includes SGI STL 3.12, a working valarray, and
+several (but not all) parts of templatized iostreams--for more information see:
+<a href="http://sourceware.cygnus.com/libstdc++/"> libstdc++-2.90.4</a>.
+</dd>
+
+<dt><b>March 23, 1999</b></dt>
+<dd>
+Through the efforts of John Wehle and Bernd Schmidt, GCC will now attempt to
+keep the stack 64bit aligned on the x86 and allocate doubles on 64bit
+boundaries.  This can significantly improve floating point performance on the
+x86.  Work will continue on aligning the stack and floating point values in
+the stack.
+</dd>
+
+<dt><b>March 15, 1999</b></dt>
+<dd>
+<a href="egcs-1.1/egcs-1.1.2.html"><b>egcs-1.1.2 is released</b></a>.
+</dd>
+
+<dt><b>March 10, 1999</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates
+<a href="cprop.html">improved global constant propagation</a> and
+<a href="lcm.html">lazy code motion optimizer framework</a>.
+</dd>
+
+<dt><b>March 7, 1999</b></dt>
+<dd>
+The egcs project now has
+<a href="onlinedocs/">additional online documentation</a>.
+</dd>
+
 <dt><b>February 26, 1999</b></dt>
 <dd>
 <a href="mailto:rth@cygnus.com">Richard Henderson</a> of
@@ -216,7 +266,7 @@ framework</b></a>.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 7, 1999.</i>
+<i>Last modified on May 30, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
