--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,6 +69,14 @@ GNU Fortran.
 Thanks to all who attended, whether in person or in spirit!
 </dd>
 
+<dt><b>May 18, 1999</b></dt>
+<dd>
+The sixth snapshot of the ongoing re-written C++ Standard Library has
+been released.  It includes SGI STL 3.2, an automatically generated
+<limits>, a partially re-written valarray, a working stringbuf and
+stringstream (for basic types). For more informtaion, please check 
+<a href="http://sourceware.cygnus.com/libstdc++/"> libstdc++-2.90.4</a>.
+</dd>
 <dt><b>April 23, 1999</b></dt>
 <dd>
 <code>g77</code> now supports optional run-time checking
@@ -97,56 +105,6 @@ under the "GNU flashes" heading.
 <dd>
 Mark Mitchell is now a co-maintainer of the C++ front end along with
 Jason Merrill.
-</dd>
-
-<dt><b>April 13, 1999</b></dt>
-<dd>
-We have set up a new <a href="lists.html">mailing list</a>
-<a href="http://egcs.cygnus.com/ml/egcs-cvs-wwwdocs/">egcs-cvs-wwwdocs</a>
-that tracks checkins to the egcs webpages CVS repository.
-</dd>
-
-<dt><b>April 7, 1999</b></dt>
-<dd> 
-<a href="http://www.cygnus.com/">Cygnus</a> announces the first public
-release of libgcj, the runtime component of the GNU compiler for Java.
-<br><a href="javaannounce.html">Read the release announcement</a>.
-<br><a href="http://sourceware.cygnus.com/java/">Goto the libgcj homepage</a>.
-</dd>
-
-<dt><b>April 6, 1999</b></dt>
-<dd>
-A new snapshot of the C++ standard library re-write has been
-released. This release includes SGI STL 3.12, a working valarray, and
-several (but not all) parts of templatized iostreams--for more information see:
-<a href="http://sourceware.cygnus.com/libstdc++/"> libstdc++-2.90.4</a>.
-</dd>
-
-<dt><b>March 23, 1999</b></dt>
-<dd> 
-Through the efforts of John Wehle and Bernd Schmidt, GCC will now attempt to
-keep the stack 64bit aligned on the x86 and allocate doubles on 64bit
-boundaries.  This can significantly improve floating point performance on the
-x86.  Work will continue on aligning the stack and floating point values in
-the stack.
-</dd>
-
-<dt><b>March 15, 1999</b></dt>
-<dd>
-<a href="egcs-1.1/egcs-1.1.2.html"><b>egcs-1.1.2 is released</b></a>.
-</dd>
-
-<dt><b>March 10, 1999</b></dt>
-<dd> 
-<a href="http://www.cygnus.com/">Cygnus</a> donates
-<a href="cprop.html">improved global constant propagation</a> and
-<a href="lcm.html">lazy code motion optimizer framework</a>.
-</dd>
-
-<dt><b>March 7, 1999</b></dt>
-<dd> 
-The egcs project now has 
-<a href="onlinedocs/">additional online documentation</a>.
 </dd>
 
 </dl>
@@ -222,7 +180,7 @@ which all contributions must meet.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on May 27, 1999.</i></small>
+<small><i>Last modified on May 30, 1999.</i></small>
 </address>
 
 </body>
