--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -7,13 +7,31 @@
 
 <p> This page is still under constrution.
 <ul>
+  <li>Just getting started...  More stuff to come.
+  <li><a href="../lcm.html">Global CSE using lazy code motion algorithms</a>.
+  <li><a href="../cfg.html">Improved control flow graph analysis and
+      manipulation</a>.
+  <li><a href="../dse.html">Local dead store elimination</a>.
+  <li><a href="../spill.html">Localized register spilling</a> to improve
+      speed and code density on small register class machines.
+  <li>Support for new processors  (c4x, hypersparc, sparclite86x, sh4, ppc750
+      and others).
+  <li>Support for new systems (OpenBSD, others)
+  <li><a href="http://sourceware.cygnus.com/java/gcj-announce.txt">Java</a>
+      front-end has been integrated.  A <a href="http://egcs.cygnus.com/javaannounce.html">runtime library</a> is available separately.
+  <li><a href="../chill.html">Chill</a> front-end and runtime has been
+      integrated.
+  <li><a href="../hoist.html">Memory Load hoisting/store sinking</a> in loops.
+  <li><a href="../alias.html">Type based alias analysis</a> is enabled by
+      default.
+  <li>Experimental internationalization support.
   <li>Core compiler is based on the gcc2 development tree from Sept 30, 1998,
   so we have all of the <a href="../egcs-1.0/features-2.8.html">features
   found in gcc-2.8</a>.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  May 15, 1999</i>
+<p><i>Last modified:  May 31, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
