Note failures which may be generic. Add irix6.5 regression info.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -140,8 +140,7 @@ Tim Prince
 OK
 </td>
 <td>
-noreturn-1.c
-return-type-1.c
+FAIL (warning tests)
 </td>
 <td>
 </td>
@@ -260,10 +259,15 @@ m68k-hp-bsd4.4
 <td>
 mips-sgi-irix6.5
 </td>
+Tim Prince
 <td>
 OK
 </td>
 <td>
+FAIL
+memcpy-bi
+blkarg.c
+(fixed by flow.c change?)
 </td>
 <td>
 </td>
@@ -360,6 +364,9 @@ sparc-sun-linux-gnu
 </td>
 </tr>
 </table>
+
+<p> It looks like warning tests noreturn-1.c and return-type-1.c are both
+failing regularly across many platforms (hpux, irix, etc).
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
