Note fast-fixinc.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -14,6 +14,8 @@
   <li><a href="../dse.html">Local dead store elimination</a>.
   <li><a href="../spill.html">Localized register spilling</a> to improve
       speed and code density on small register class machines.
+  <li>The new faster scheme for fixing vendor header files is eanbled by
+      default.
   <li>Support for new processors  (c4x, hypersparc, sparclite86x, sh4, ppc750
       and others).
   <li>Support for new systems (OpenBSD, others)
