--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -135,12 +135,11 @@ N/A
 <td>
 hppa1.1-hp-hpux10.20
 </td>
-Tim Prince
 <td>
 OK
 </td>
 <td>
-FAIL (warning tests)
+OK
 </td>
 <td>
 </td>
@@ -259,15 +258,11 @@ m68k-hp-bsd4.4
 <td>
 mips-sgi-irix6.5
 </td>
-Tim Prince
 <td>
 OK
 </td>
 <td>
-FAIL
-memcpy-bi
-blkarg.c
-(fixed by flow.c change?)
+OK
 </td>
 <td>
 </td>
@@ -307,11 +302,18 @@ OK
 </tr>
 <tr>
 <td>
-sparc-sun-solaris2.6
+sparc-sun-solaris2.5
 </td>
 <td>
+OK
 </td>
 <td>
+981001-2.c
+990513-1.c?
+weak alias tests
+g++.dg tests?
+asm-extn1.C
+attrib5.C
 </td>
 <td>
 </td>
@@ -340,6 +342,7 @@ sparc-sun-solaris2.7
 sparc-sun-sunos4.1
 </td>
 <td>
+OK
 </td>
 <td>
 </td>
@@ -365,8 +368,8 @@ sparc-sun-linux-gnu
 </tr>
 </table>
 
-<p> It looks like warning tests noreturn-1.c and return-type-1.c are both
-failing regularly across many platforms (hpux, irix, etc).
+<p> (1)It looks like warning tests noreturn-1.c and return-type-1.c are both
+failing regularly across many platforms (hpux, irix, slowaris).
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
