* badspammer.html: Make the text a little more gentle.  NB the 	original text was a rip-off from www.mail-archive.com (I referred 	to it as "mail-archives" by accident earlier).

--- a/htdocs/badspammer.html
+++ b/htdocs/badspammer.html
@@ -7,23 +7,16 @@
 <h1><a href="/">The EGCS Project</a></h1>
 </div>
 
-<h1>Spambot detected.</h1>
+<h1>Spambot detected</h1>
 
-<p>
-Hi, our server has decided that you are, in fact, not a human being,
-but rather a sinister computer program designed to scoop up email
-addresses and bombard them with unsolicited advertisements.
+<p>Hi, your web browser has triggered our spambot detection mechanism.
+A spambot is a computer program designed to scoop up e-mail addresses
+and bombard them with unsolicited advertisements.
 
-<p>
-Now, since we find that kind of conduct reprehensible, we have decided
-to deny you access to our site. Hey, you're lucky we didn't launch
-nuclear missiles at you.
-
-<p>
-If we made a mistake, and you really are a human being, we apologize
-profusely. It just happens that your browser looks VERY similar to
-a known spambot. Try using a different browser and you should have no
-problem connecting to the site.
+<p>If we made a mistake, and you really are a human being, we apologize
+profusely.  It just happens that your browser looks VERY similar to a
+known spambot.  Please try using a different browser and you should have
+no problem connecting to the site.
 
 <p>
 Have a good day (and die, spambots, die)
