--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -103,7 +103,7 @@ fast-fixinc
 alpha-dec-osf4.0
 </td>
 <td>
-FAILS
+OK
 </td>
 <td>
 </td>
@@ -139,7 +139,6 @@ hppa1.1-hp-hpux10.20
 OK
 </td>
 <td>
-OK
 </td>
 <td>
 </td>
@@ -263,7 +262,6 @@ OK
 </td>
 <td>
 990513-1.c
-bf64-1.c
 </td>
 <td>
 </td>
@@ -310,7 +308,7 @@ OK
 </td>
 <td>
 981001-2.c
-990513-1.c?
+990513-1.c
 weak alias tests
 g++.dg tests?
 asm-extn1.C
@@ -368,6 +366,10 @@ sparc-sun-linux-gnu
 </td>
 </tr>
 </table>
+
+<p> execute/990513-1.c is regressing on several targets.  It is a bug in
+the loop optimizer.  I've passed it on to Joern.  Hopefully it will get
+fixed soon.
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
