--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -36,7 +36,7 @@ release cycle.
 # snapshot
 set snapdir "/some/place/gcc-19990415"
 
-# set old_release_prefix to the prefix directory of an installed egcs-1.0.3a.
+# set old_release_prefix to the prefix directory of an installed egcs-1.1.2.
 set old_release_prefix /prefix/for/egcs-1.1.2
 
 set rootme "."
@@ -199,8 +199,11 @@ OK
 i686-pc-linux-gnulibc1
 </td>
 <td>
+OK
 </td>
 <td>
+ieee/980619-1.c
+conpr tests?
 </td>
 <td>
 </td>
