SCO results (ouch).

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -106,6 +106,7 @@ alpha-dec-osf4.0
 OK
 </td>
 <td>
+tmap.cc, tstring.cc
 </td>
 <td>
 </td>
@@ -233,8 +234,27 @@ OK
 i686-pc-sco3.2v5.0.5
 </td>
 <td>
+OK
 </td>
 <td>
+tcomplex
+tlist (dwarf1 bug)
+tmap
+tstring
+tvector
+980312-1.c
+980313-1.c
+990127-2.c
+bf-pack-1.c
+conversion.c
+eeprof-1.c
+typename8.C
+conpr
+sig13.C
+new3.C
+I870816-3.f
+971102-1.f
+u77-test.f
 </td>
 <td>
 </td>
@@ -373,6 +393,11 @@ sparc-sun-linux-gnu
 <p> execute/990513-1.c is regressing on several targets.  It is a bug in
 the loop optimizer.  I've passed it on to Joern.  Hopefully it will get
 fixed soon.
+
+<p> gcc.dg/990119-1.c seems to be a common cpp regression.  Not sure how
+important it is yet.
+
+<p> cast-qual & compare1 are also common failures.  Warning tests.
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
