--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -107,6 +107,7 @@ OK
 </td>
 <td>
 tmap.cc, tstring.cc
+(gcc,g++,g77,objc in progress)
 </td>
 <td>
 </td>
@@ -123,6 +124,8 @@ alphaev5-unknown-linux-gnu
 OK
 </td>
 <td>
+execute/990513-1.c
+dg/980717-1.c
 </td>
 <td>
 </td>
@@ -204,7 +207,6 @@ OK
 </td>
 <td>
 ieee/980619-1.c
-conpr tests?
 </td>
 <td>
 </td>
@@ -249,10 +251,9 @@ bf-pack-1.c
 conversion.c
 eeprof-1.c
 typename8.C
-conpr
 sig13.C
 new3.C
-I870816-3.f
+970816-3.f
 971102-1.f
 u77-test.f
 </td>
@@ -333,7 +334,6 @@ OK
 981001-2.c
 990513-1.c
 weak alias tests
-g++.dg tests?
 asm-extn1.C
 attrib5.C
 </td>
@@ -395,9 +395,16 @@ the loop optimizer.  I've passed it on to Joern.  Hopefully it will get
 fixed soon.
 
 <p> gcc.dg/990119-1.c seems to be a common cpp regression.  Not sure how
-important it is yet.
+important it is yet.  Is it really a regression (ie, does egcs-1.1.2 fail
+this test?)
 
-<p> cast-qual & compare1 are also common failures.  Warning tests.
+<p> cast-qual & compare1 are also common failures.  Warning tests.  Are
+these actually regressions?
+
+<p> The "conpr" tests are testing for construtor prioritiy support which
+is dependent on specific versions of gas & gld and egcs/gcc.  It is expected
+that egcs-1.1.2 may fail in the compilation stage while gcc-2.95 may fail
+the execution stage. 
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
@@ -416,7 +423,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on May 31, 1999.</i>
+<p><i>Last modified on June 2, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
