libg++ OK on i686-pc-linux-gnu note libg++ testsuite failures on sparc-sun-solaris2.5

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -230,6 +230,7 @@ OK
 <td>
 </td>
 <td>
+OK
 </td>
 <td>
 N/A
@@ -348,6 +349,8 @@ attrib5.C
 <td>
 </td>
 <td>
+trational
+trandom
 </td>
 <td>
 </td>
@@ -396,8 +399,8 @@ OK
 </td>
 <td>
 </td>
-N/A
 <td>
+N/A
 </td>
 </tr>
 </table>
