--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -178,10 +178,10 @@ At least one person as reported problems with older versions of gnu-make on
 this platform.  make-3.76 is reported to work correctly.
 
 <p><b>powerpc-*-linux-gnu*</b><br>
-You will need
-<a href="ftp://ftp.yggdrasil.com/private/hjl">binutils-2.8.1.0.23</a> for
-a working egcs. It is strongly recommended to recompile binutils with egcs
-if you initially built it with gcc-2.7.2.*.
+You will need 
+<a href="ftp://ftp.varesearch.com/pub/support/hjl/binutils">binutils-2.9.1.0.23</a> or
+newer for a working gcc/egcs. It is strongly recommended to recompile binutils
+if you initially built it with gcc-2.7.2.x.
 
 <p><b>sparc-unkonwn-linux-gnulibc1</b><br>
 It has been reported that you might need 
