--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -73,9 +73,10 @@ Thanks to all who attended, whether in person or in spirit!
 <dd>
 The sixth snapshot of the ongoing re-written C++ Standard Library has
 been released.  It includes SGI STL 3.2, an automatically generated
-<limits>, a partially re-written valarray, a working stringbuf and
-stringstream (for basic types). For more informtaion, please check 
-<a href="http://sourceware.cygnus.com/libstdc++/"> libstdc++-2.90.4</a>.
+<tt>&lt;limits&gt;<\tt>, a partially re-written valarray, a working
+stringbuf and stringstream (for basic types). For more informtaion,
+please check <a href="http://sourceware.cygnus.com/libstdc++/">
+libstdc++-2.90.4</a>. 
 </dd>
 <dt><b>April 23, 1999</b></dt>
 <dd>
