alpha-linux update.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -125,7 +125,6 @@ OK
 </td>
 <td>
 execute/990513-1.c
-dg/980217-1.c
 </td>
 <td>
 </td>
@@ -148,7 +147,7 @@ OK
 <td>
 </td>
 <td>
-OK
+tfile
 </td>
 <td>
 OK
