980619-1.c is not a real regression.  Remove it from the failing list. Note that fast-fixincludes is losing on osf1.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -114,6 +114,7 @@ tmap.cc, tstring.cc
 <td>
 </td>
 <td>
+FAILING
 </td>
 </tr>
 <tr>
@@ -209,7 +210,7 @@ i686-pc-linux-gnulibc1
 OK
 </td>
 <td>
-ieee/980619-1.c
+OK
 </td>
 <td>
 </td>
@@ -227,7 +228,7 @@ i686-pc-linux-gnu
 OK
 </td>
 <td>
-ieee/980619-1.c
+OK
 </td>
 <td>
 </td>
@@ -441,7 +442,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on June 2, 1999.</i>
+<p><i>Last modified on June 3, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
