--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -354,10 +354,11 @@ attrib5.C
 <td>
 </td>
 <td>
-trational
-trandom
+tRational
+tRandom
 </td>
 <td>
+OK
 </td>
 </tr>
 <tr>
@@ -387,7 +388,8 @@ OK
 <td>
 </td>
 <td>
-tPlotfile3D
+tRational
+tRandom
 </td>
 <td>
 </td>
@@ -411,6 +413,7 @@ N/A
 </tr>
 </table>
 
+<h1> Regression testing notes </h1>
 <p> execute/990513-1.c is regressing on several targets.  It is a bug in
 the loop optimizer.  I've passed it on to Joern.  Hopefully it will get
 fixed soon.
@@ -426,6 +429,10 @@ these actually regressions?
 is dependent on specific versions of gas & gld and egcs/gcc.  It is expected
 that egcs-1.1.2 may fail in the compilation stage while gcc-2.95 may fail
 the execution stage. 
+
+<p> libg++ uses some nonstandard features (like M_PI) which do not exist
+on some systems (notably Stunos).  Hacks where installed to work around
+the non-portable code in libg++ so that it could be tested.
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
