Update CrossGCC FAQ link.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -843,7 +843,7 @@ stage1.  More information can be found in the section on NEXTSTEP 3.x in the
 usually need additional software (cross assembler, cross linker, target
 libraries, target include files, etc).
 
-<p>We recommend reading the <a href="ftp://ftp.cygnus.com/pub/embedded/crossgcc/FAQ">
+<p>We recommend reading the <a href="http://www.objsw.com/CrossGCC/">
 crossgcc FAQ</a> for information about building cross compilers.
 
 <p>If you have all the pieces available, then `make cross' should build a
@@ -1191,7 +1191,7 @@ is declared pure-virtual [class.dtor]/7.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  May 17, 1999</i>
+<p><i>Last modified:  June  3, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
