Another step in the ongoing EGCS/GCC transition.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -11,17 +11,18 @@
 
 Welcome to the egcs project!
 
-<p>egcs is an experimental step in the development of GCC, the GNU C
-compiler.  If you are new to the egcs project, you should probably read
-the <a href="mission.html">egcs mission statement</a>.
+<p>Originally, egcs started as an experimental step in the development
+of GCC, the GNU C compiler (cf. the <a href="mission.html">original
+egcs mission statement</a>). In April 1999, the egcs steering
+committee was appointed official GNU maintainer for GCC (cf. the <a
+href="gccmission.html">gcc mission statement</a>) and GCC has been
+renamed to GNU Compiler Collection.</p>
 
 <p>We want to work closely with contributors to help and encourage
 them to submit their changes for inclusion in egcs.  The egcs project
 provides access to its <a href="#development_sources">development sources</a>
 with weekly snapshots and anonymous CVS.  All code continues to be <a
-href="contribute.html">assigned to the FSF</a> exactly as before and
-is available to the gcc2 maintainers for ultimate inclusion into the
-gcc2 tree.
+href="contribute.html">assigned to the FSF</a> exactly as before.</p>
 
 <p>We will provide regular, high quality <a href="#releases">releases</a>.
 We want those releases to work well on a variety of native (including
@@ -181,7 +182,7 @@ which all contributions must meet.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on May 30, 1999.</i></small>
+<small><i>Last modified on June  4, 1999.</i></small>
 </address>
 
 </body>
