Update freebsd status.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -157,33 +157,39 @@ OK
 </tr>
 <tr>
 <td>
-i386-pc-freebsd2.2.8
+i386-pc-freebsd2.2.6
+</td>
+<td>
+OK (normal)
+FAIL (--enable-shared)
 </td>
 <td>
 </td>
 <td>
 </td>
 <td>
+linker errors
 </td>
 <td>
-</td>
-<td>
+OK
 </td>
 </tr>
 <tr>
 <td>
-i386-pc-freebsd3.2
+i386-pc-freebsd3.0
 </td>
 <td>
-FAILING
-</td>
-<td>
-</td>
-<td>
+OK
 </td>
 <td>
 </td>
 <td>
+</td>
+<td>
+tgetent redeclaration
+</td>
+<td>
+OK
 </td>
 </tr>
 <tr>
