Add freebsd testsuite regressions

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -164,6 +164,15 @@ OK (normal)
 FAIL (--enable-shared)
 </td>
 <td>
+rbug.c
+980312-1
+980313-1
+980414-1
+gcov-1
+gcov-2
+major c++ failures
+19990502-0
+objc tests
 </td>
 <td>
 </td>
@@ -182,6 +191,12 @@ i386-pc-freebsd3.0
 OK
 </td>
 <td>
+rbug
+mzero
+weak-1
+profile-1
+p6610a
+null1
 </td>
 <td>
 </td>
