Explain how to build in parallel.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -72,6 +72,14 @@ following steps:
 
 <p>Note that if an error occurs in any step the make process will exit.
 
+<p><b>Building in parallel</b>
+
+<p> If you have a multiprocessor you can use `<tt>make bootstrap
+MAKE="make -j 2" -j 2</tt>' instead of just `<tt>make bootstrap</tt>'
+when building EGCS.  You can use a bigger +number instead of two if
+you like.  In most cases, it won't help +to use a number bigger than
+the number of processors in your machine.
+
 <p>
 <hr>
 <i>Last modified on April 22, 1999.</i>
